# Book-Assistant

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
book_assistant/: db.sqlite3
book_assistant/ai_module/: config.py  db_handler.py  logger.py
book_assistant/phase1/: apps.py  views.py
book_assistant/phase1/templates/phase1/: home.html  index.html
book_assistant/reader/: settings.py
src/: config.py  db_handler.py  loader.py  logger.py
src/ai_module/: config.py  db_handler.py  logger.py
src/phase1/: forms.py  views.py
src/phase1/templates/phase1/: index.html
src/reader/: settings.py  urls.py
