[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "book_assistant"
version = "1.0.0"
dependencies = [
    "chromadb==0.5.18",
    "langchain-chroma==0.1.4",
    "langchain-community==0.3.7",
    "pypdf==5.1.0",
    "langchain-openai==0.2.8",
    "django==5.1.3",
    "python-dotenv==1.0.1"
]

[tool.hatch.build.targets.wheel]
packages = ["book_assistant"]